--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+  <meta charset="utf-8">
+  <!-- mobile friendly -->
+  <meta name="viewport" content="width=device-width, initial scale=1">
+  <link rel="preconnect" href="https://fonts.gstatic.com"> 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap">
+  <link rel="stylesheet" href="css/main.css">
+  <title>Eric Wolf | Home</title>
+  <meta name="author" content="Grace Collins">
+</head>
+<body>
 
+  <h1>Neon Sign</h1>
+
+<section class="box" id="contents">
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="gallery.html">History</a></li>
+    <li><a href="about-us.html">Fabrication</a></li>
+    <li><a href="why-i-love-him.html">Applications</a></li>
+  </ul>
+</nav>
+</section>
