--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <nav>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="gallery.html">History</a></li>
-    <li><a href="about-us.html">Fabrication</a></li>
-    <li><a href="why-i-love-him.html">Applications</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="about-us.html">About Us</a></li>
+    <li><a href="why-i-love-him.html">Why I Love Him</a></li>
   </ul>
 </nav>
 </section>
