--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- mobile friendly -->
   <meta name="viewport" content="width=device-width, initial scale=1">
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=ElMessiri&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quattrocento&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap">
   <link rel="stylesheet" href="css/main.css">
   <title>Eric Wolf | Home</title>
