Update and rename about-us.html to our-journey.html

--- a/our-journey.html
+++ b/our-journey.html
@@ -9,19 +9,19 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quattrocento&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap">
   <link rel="stylesheet" href="css/main.css">
-  <title>Eric Wolf | About Us</title>
+  <title>Eric Wolf | Our Journey</title>
   <meta name="author" content="Grace Collins">
 </head>
 <body>
 
-  <h1>About Us</h1>
+  <h1>Our Journey</h1>
 
 <section class="box" id="contents">
 <nav>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="about-us.html">About Us</a></li>
+    <li><a href="our-journey.html">Our Journey</a></li>
     <li><a href="why-i-love-him.html">Why I Love Him</a></li>
   </ul>
 </nav>
