--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="about-us.html">About Us</a></li>
+    <li><a href="our-journey.html">Our Journey</a></li>
     <li><a href="why-i-love-him.html">Why I Love Him</a></li>
   </ul>
 </nav>
