--- a/our-journey.html
+++ b/our-journey.html
@@ -26,3 +26,10 @@
   </ul>
 </nav>
 </section>
+
+<a href="october-2020.html">
+<figure class="months">
+   <img alt="october-2020" src="months/october-2020.jpg"> 
+  <figcaption><div>October 2020</div></figcaption>
+</figure>
+</a>
