--- a/our-journey.html
+++ b/our-journey.html
@@ -27,9 +27,9 @@
 </nav>
 </section>
 
-<a href="october-2020.html">
+<a href="months/october-2020.html">
 <figure class="months">
-   <img alt="october-2020" src="months/october-2020.jpg"> 
+   <img alt="october-2020" src="month-pics/october-2020.jpg"> 
   <figcaption><div>October 2020</div></figcaption>
 </figure>
 </a>
