--- a/our-journey.html
+++ b/our-journey.html
@@ -29,7 +29,7 @@
 
 <a href="months/october-2020.html">
 <figure class="months">
-   <img alt="october-2020" src="month-pics/october-2020.jpg"> 
+   <img alt="october-2020" src="months/month-pics/october-2020.jpg"> 
   <figcaption><div>October 2020</div></figcaption>
 </figure>
 </a>
