--- a/months/october-2020.html
+++ b/months/october-2020.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quattrocento&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap">
   <link rel="stylesheet" href="css/main.css">
-  <title>Eric Wolf | Our Journey</title>
+  <title>Eric Wolf | October 2020</title>
   <meta name="author" content="Grace Collins">
 </head>
 <body>
 
-  <h1>Our Journey</h1>
+  <h1>October 2020</h1>
 
 <section class="box" id="contents">
 <nav>
