--- a/our-journey.html
+++ b/our-journey.html
@@ -29,6 +29,6 @@
 
 <a href="months/october-2020.html">
 <figure class="months">
-   <img alt="oct-2020" src="months/month-pics/oct-2020.jpg"> 
+   <img alt="october-2020" src="months/month-pics/october-2020.png"> 
 </figure>
 </a>
