--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </section>
 
 <p>I have to tell you about a boy named Eric Wolf. He's probably one of the best humans you'll ever meet. He's sweet and he makes me laugh all of the time. Even though he's my boyfriend he is also my best friend. This sounds cheesy, but I can't think of anyone else who I would tell anything and everything to. He's always on my mind. Almost everything reminds me of him. There's never a moment where I don't accidentally relate things going on in my life to this incredible human being. Some people might find it annoying which is why I try to keep most of my comparisons in my head. But I can't help to just spend every waking moment of my life just loving him.</p>
-<figure>
+<figure class="home">
   <img alt="home" src="pictures/eric-index.jpg">
 </figure>
 <p>We are in a long distance relationship. This might be the reason that I dream and think about him all of the time, but I highly doubt it. I think I'd dream about him even if we were together 24/7, just in a different way. The way I think about him now is longing. I long for his hugs and cuddles. I long to hear his laugh in person. I long to be able to kiss him whenever I feel like it. I long for our daily calls because it's the happiest part of my day, no matter what happens. Calling him is the closest way to get to him and I'll take that any day. Although I can't see him in person and it breaks my heart, I know it's worth it. I know it's worth it because one day we are going to live a beautiful life together for the rest of our lives. He is my person and I wouldn't trade anything in the world for him. I love him.</p>
