--- a/our-journey.html
+++ b/our-journey.html
@@ -30,5 +30,7 @@
 <a href="months/october-2020.html">
 <figure class="months">
    <img alt="october-2020" src="months/month-pics/october-2020.jpg"> 
+   <img alt="november-2020" src="months/month-pics/november-2020.jpg"> 
+   <img alt="december-2020" src="months/month-pics/december-2020.jpg"> 
 </figure>
 </a>
