--- a/our-journey.html
+++ b/our-journey.html
@@ -27,10 +27,20 @@
 </nav>
 </section>
 
-<a href="months/october-2020.html">
+<a href="october-2020.html">
 <figure class="months">
-   <img alt="october-2020" src="months/month-pics/october-2020.jpg"> 
+   <img alt="october-2020" src="months/month-pics/october-2020.jpg">  
+</figure>
+</a>
+  
+<a href="november-2020.html">
+<figure class="months">
    <img alt="november-2020" src="months/month-pics/november-2020.jpg"> 
-   <img alt="december-2020" src="months/month-pics/december-2020.jpg"> 
+</figure>
+</a>
+  
+<a href="december-2020.html">
+<figure class="months">
+   <img alt="december-2020" src="months/month-pics/december-2020.jpg">
 </figure>
 </a>
