--- a/our-journey.html
+++ b/our-journey.html
@@ -27,6 +27,9 @@
 </nav>
 </section>
 
+
+<section class="images" id="grid">
+  
 <a href="october-2020.html">
 <figure class="months">
    <img alt="october-2020" src="months/month-pics/october-2020.jpg">  
@@ -44,3 +47,5 @@
    <img alt="december-2020" src="months/month-pics/december-2020.jpg">
 </figure>
 </a>
+  
+</section>
