--- a/our-journey.html
+++ b/our-journey.html
@@ -32,20 +32,37 @@
   
 <a href="october-2020.html">
 <figure class="months">
-   <img alt="october-2020" src="months/month-pics/october-2020.jpg">  
+   <img alt="october-2020" src="month-pics/october-2020.jpg">  
 </figure>
 </a>
   
 <a href="november-2020.html">
 <figure class="months">
-   <img alt="november-2020" src="months/month-pics/november-2020.jpg"> 
+   <img alt="november-2020" src="month-pics/november-2020.jpg"> 
 </figure>
 </a>
   
 <a href="december-2020.html">
 <figure class="months">
-   <img alt="december-2020" src="months/month-pics/december-2020.jpg">
+   <img alt="december-2020" src="month-pics/december-2020.jpg">
+</figure>
+</a>
+
+<a href="january-2021.html">
+<figure class="months">
+   <img alt="january-2021" src="month-pics/january-2021.jpg">  
 </figure>
 </a>
   
+<a href="february-2021.html">
+<figure class="months">
+   <img alt="february-2021" src="month-pics/february-2021.jpg"> 
+</figure>
+</a>
+  
+<a href="march-2021.html">
+<figure class="months">
+   <img alt="march-2021" src="month-pics/march-2021.jpg">
+</figure>
+</a>
 </section>
